--- a/MEDIANO/Programacao_assincrona/miau/pubspec.yaml
+++ b/MEDIANO/Programacao_assincrona/miau/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 # Add regular dependencies here.
 dependencies:
   path: ^1.8.0
+  http: ^1.2.0
+
 
 dev_dependencies:
   lints: ^3.0.0
